--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="container">
 		<h3 class="tittle">ACERCA DE NOSOTROS</h3>
 		<div class="col-md-5 about-grid-left">
-			<img class="img-responsive" src="images/6.jpg" alt=""/>
+			<img class="img-responsive" src="images/productos/sabroricos-37.jpg" alt=""/>
 		</div>
 		<div class="col-md-7 about-grid">
 							<h3>Historia de Sabroricos</h3>
