--- a/blog.html
+++ b/blog.html
@@ -104,7 +104,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<h3 class="tittle">Productos</h3>
 		<div class="col-md-4 blog-post-grids">
 			<div class="blog-post">
-					<a href="#"><img src="images/b1.jpg" class="img-responsive" alt=""/></a>
+					<a href="#"><img src="images/productos/sabroricos-3.jpg" class="img-responsive" alt=""/></a>
 					<div class="text">
 						<a href="#"> Aliquam erat volutpat</a>
 					</div>
@@ -116,7 +116,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 			</div>
 			<div class="blog-post">
-					<a href="#"><img src="images/b2.jpg" class="img-responsive" alt="  "/></a>
+					<a href="#"><img src="images/productos/sabroricos-32.jpg" class="img-responsive" alt="  "/></a>
 					<div class="text">
 						<a href="#"> Aliquam erat volutpat</a>
 					</div>
@@ -130,7 +130,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 		<div class="col-md-4 blog-post-grids">
 			<div class="blog-post">
-				<a href="#"><img src="images/b3.jpg" class="img-responsive" alt="  "/></a>
+				<a href="#"><img src="images/productos/sabroricos-36.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
 					<a href="#"> Aliquam erat volutpat</a>
 				</div>
@@ -142,7 +142,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 			</div>
 			<div class="blog-post">
-				<a href="#"><img src="images/b4.jpg" class="img-responsive" alt="  "/></a>
+				<a href="#"><img src="images/productos/sabroricos-30.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
 					<a href="#"> Aliquam erat volutpat</a>
 				</div>
@@ -156,7 +156,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 		<div class="col-md-4 blog-post-grids">
 			<div class="blog-post">
-				<a href="#"><img src="images/b4.jpg" class="img-responsive" alt="  "/></a>
+				<a href="#"><img src="images/productos/sabroricos-6.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
 					<a href="#"> Aliquam erat volutpat</a>
 				</div>
@@ -168,7 +168,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 			</div>
 			<div class="blog-post">
-				<a href="#"><img src="images/b1.jpg" class="img-responsive" alt="  "/></a>
+				<a href="#"><img src="images/productos/sabroricos-7.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
 					<a href="#"> Aliquam erat volutpat</a>
 				</div>
