--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="banner-info">
 							<h3>SABRORICOS</h3>
 							<h4>FRASE SABRORICOS 1</h4>
-							<p>Sed ut perspiciatis unde omnis iste natus 
+							<p id="p-header">Sed ut perspiciatis unde omnis iste natus 
 							error sit voluptatem accusantium doloremque laudantium, 
 							totam rem aperiam, eaque ipsa quae ab illo inventore 
 							veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
@@ -134,7 +134,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="banner-info">
 							<h3>SABRORICOS</h3>
 							<h4>FRASE SABRORICOS 2</h4>
-							<p>Sed ut perspiciatis unde omnis iste natus 
+							<p id="p-header">Sed ut perspiciatis unde omnis iste natus 
 							error sit voluptatem accusantium doloremque laudantium, 
 							totam rem aperiam, eaque ipsa quae ab illo inventore 
 							veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
@@ -146,7 +146,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="banner-info">
 							<h3>SABRORICOS</h3>
 							<h4>FRASE SABRORICOS 3</h4>
-							<p>Sed ut perspiciatis unde omnis iste natus 
+							<p id="p-header">Sed ut perspiciatis unde omnis iste natus 
 							error sit voluptatem accusantium doloremque laudantium, 
 							totam rem aperiam, eaque ipsa quae ab illo inventore 
 							veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
@@ -165,7 +165,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="welcome-head">
 			<h3 class="tittle">Bienvenido</h3>
 			<div class="wel-img mask text-center">
-					<a href="single.html" class="mask"><img class="img-responsive zoom-img" src="images/1.jpg" alt=""/></a>
+					<a href="single.html" class="mask"><img class="img-responsive zoom-img" src="images/productos/sabroricos-28.jpg" alt=""/></a>
 			</div>
 			<h4>NUESTROS DULCES SON LOS MEJORES DEL MUNDO</h4>
 			<p>Nam libero tempore, cum soluta nobis est eligendi optio 
@@ -188,7 +188,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="special-grids">
 			<div class="col-md-6 special-left l-grids">
 				 <figure class="effect-bubba">
-						<img src="images/4.jpg" alt=""/>
+						<img src="images/productos/sabroricos-29.jpg" alt=""/>
 						<figcaption>
 							<h4>SABRORICOS</h4>
 							<p>In sit amet sapien eros Integer quibusdam et aut officiis debitis aut rerum in tincidunt labore et dolore magna aliqua</p>																
@@ -203,25 +203,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					possimus, omnis voluptas assumenda est, omnis dolor repellendus. 
 					Temporibus autem quibusdam et aut officiis debitis aut rerum </p>
 				</div>
-			</div>
-			<div class="col-md-6 special-right l-left">
-				<div class="sp-wid l-wid">
-					<h4>HECHOS CON LOS MEJORES INGREDIENTES</h4>
-					<p>Nam libero tempore, cum soluta nobis est eligendi optio 
-					cumque nihil impedit quo minus id quod maxime placeat facere
-					possimus, omnis voluptas assumenda est, omnis dolor repellendus. 
-					Temporibus autem quibusdam et aut officiis debitis aut rerum </p>
-				</div>
-				
-			</div>
-			<div class="col-md-6 special-left l-right l-grids">
-				 <figure class="effect-bubba">
-						<img src="images/3.jpg" alt=""/>
-						<figcaption>
-							<h4>SABRORICOS</h4>
-							<p>In sit amet sapien eros quibusdam et aut officiis debitis aut rerum Integer in tincidunt labore et dolore magna aliqua</p>																
-						</figcaption>			
-				 </figure>
 			</div>
 			<div class="clearfix"></div>
 		</div>
