--- a/index.html
+++ b/index.html
@@ -38,6 +38,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			});
 		</script>
 	<!-- start-smoth-scrolling -->
+	<style>
+		#white-text{
+			color: white;
+		}
+		.white-text{
+			color: white;
+		}
+		.btn-sabroso{
+			background-color: #2A46DD;
+			color: white;
+		}
+		.ul-footer li{
+			color: white;
+		}
+	</style>
 </head>
 <body>
 <!-- header -->
@@ -67,7 +82,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="logo-head">
 	<div class="container">
 		<div class="logo">
-			<h1><a href="index.html"><img src="images/logo.png" alt=""/></a></h1>
+			<h1><a href="index.html"><img src="images/logo.png" class="img-responsive"/></a></h1>
 		</div>
 		<div class="navigation">
 				<span class="menu"><img src="images/menu.png" alt=""/></span>
@@ -122,11 +137,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="banner-info">
 							<h3>SABRORICOS</h3>
 							<h4>FRASE SABRORICOS 1</h4>
-							<p id="p-header">Sed ut perspiciatis unde omnis iste natus 
+							<p id="white-text">Sed ut perspiciatis unde omnis iste natus 
 							error sit voluptatem accusantium doloremque laudantium, 
 							totam rem aperiam, eaque ipsa quae ab illo inventore 
 							veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
-							<a class="hvr-rectangle-out button" href="single.html">LEER MAS</a>
+							<a class="btn-sabroso btn" href="single.html">Conocer más</a>
 						</div>
 						<div class="clearfix"></div>
 					</li>
@@ -134,11 +149,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="banner-info">
 							<h3>SABRORICOS</h3>
 							<h4>FRASE SABRORICOS 2</h4>
-							<p id="p-header">Sed ut perspiciatis unde omnis iste natus 
-							error sit voluptatem accusantium doloremque laudantium, 
-							totam rem aperiam, eaque ipsa quae ab illo inventore 
-							veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
-							<a class="hvr-rectangle-out button" href="single.html">LEER MAS</a>
+							<p id="white-text">
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus aperiam nostrum animi harum dolor, quisquam vero voluptas velit, voluptatem asperiores quidem impedit dignissimos. Voluptatibus omnis, porro ad illo saepe, rerum.
+							</p>
+							<a class="btn-sabroso btn" href="single.html">Conocer más</a>
 						</div>
 						<div class="clearfix"></div>
 					</li>
@@ -146,11 +160,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="banner-info">
 							<h3>SABRORICOS</h3>
 							<h4>FRASE SABRORICOS 3</h4>
-							<p id="p-header">Sed ut perspiciatis unde omnis iste natus 
+							<p id="white-text">Sed ut perspiciatis unde omnis iste natus 
 							error sit voluptatem accusantium doloremque laudantium, 
 							totam rem aperiam, eaque ipsa quae ab illo inventore 
 							veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
-							<a class="hvr-rectangle-out button" href="single.html">LEER MAS</a>
+							<a class="btn-sabroso btn" href="single.html">Conocer más</a>
 						</div>
 						<div class="clearfix"></div>
 					</li>
@@ -259,7 +273,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="footer-grids">	
 			<div class="col-md-3 footer-grid">
 				<h4>DIRECCION</h4>
-				<ul>
+				<ul >
 					<li>SABRORICOS</li>
 					<li>1234 calle 123</li>
 					<li>BC 29601 </li>
@@ -268,7 +282,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="col-md-3 footer-grid">
 				<h4>CONTACTO</h4>
-				<ul>
+				<ul >
 					<li>Tel: +1 234-567-890</li>
 					<li>Fax: +1 646-216-9789</li>
 					<li>Email: <a href="mailto:info@sabroricos.com">info@sabroricos.com </a></li>
@@ -277,7 +291,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-3 footer-grid">
 				<h4>SUBSCRIBETE</h4>
 				<form>
-					<input type="email" value="Enter your email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Enter your email';}" required="">
+					<input class="form-control"type="email" value="Enter your email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Enter your email';}" required="">
 					<input type="submit" value=" ">
 				</form>
 			</div>
