--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			});
 		</script>
 	<!-- start-smoth-scrolling -->
+	<style>
+	#text-white{
+	  color: white;
+	}
+	</style>
 </head>
 <body>
 <!-- header -->
@@ -122,7 +127,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="banner-info">
 							<h3>SABRORICOS</h3>
 							<h4>FRASE SABRORICOS 1</h4>
-							<p id="p-header">Sed ut perspiciatis unde omnis iste natus 
+							<p id="text-white">Sed ut perspiciatis unde omnis iste natus 
 							error sit voluptatem accusantium doloremque laudantium, 
 							totam rem aperiam, eaque ipsa quae ab illo inventore 
 							veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
@@ -134,7 +139,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="banner-info">
 							<h3>SABRORICOS</h3>
 							<h4>FRASE SABRORICOS 2</h4>
-							<p id="p-header">Sed ut perspiciatis unde omnis iste natus 
+							<p id="text-white">Sed ut perspiciatis unde omnis iste natus 
 							error sit voluptatem accusantium doloremque laudantium, 
 							totam rem aperiam, eaque ipsa quae ab illo inventore 
 							veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
@@ -146,7 +151,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="banner-info">
 							<h3>SABRORICOS</h3>
 							<h4>FRASE SABRORICOS 3</h4>
-							<p id="p-header">Sed ut perspiciatis unde omnis iste natus 
+							<p id="text-white">Sed ut perspiciatis unde omnis iste natus 
 							error sit voluptatem accusantium doloremque laudantium, 
 							totam rem aperiam, eaque ipsa quae ab illo inventore 
 							veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
