Change hexa color

--- a/index.html
+++ b/index.html
@@ -45,9 +45,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		.white-text{
 			color: white;
 		}
-		.btn-sabroso{
+		#btn-sabroso{
 			background-color: #2A46DD;
 			color: white;
+		}
+		#btn-sabroso:hover{
+			background-color: #2a73dd;
+		}
+		.btn-sabroso:hover{
+			background-color: #2A46DD;
+			color: black;
 		}
 		.ul-footer li{
 			color: white;
@@ -141,7 +148,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							error sit voluptatem accusantium doloremque laudantium, 
 							totam rem aperiam, eaque ipsa quae ab illo inventore 
 							veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
-							<a class="btn-sabroso btn" href="single.html">Conocer más</a>
+							<a id="btn-sabroso"class="btn" href="single.html">Conocer más</a>
 						</div>
 						<div class="clearfix"></div>
 					</li>
@@ -152,7 +159,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<p id="white-text">
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus aperiam nostrum animi harum dolor, quisquam vero voluptas velit, voluptatem asperiores quidem impedit dignissimos. Voluptatibus omnis, porro ad illo saepe, rerum.
 							</p>
-							<a class="btn-sabroso btn" href="single.html">Conocer más</a>
+							<a id="btn-sabroso"class="btn" href="single.html">Conocer más</a>
 						</div>
 						<div class="clearfix"></div>
 					</li>
@@ -164,7 +171,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							error sit voluptatem accusantium doloremque laudantium, 
 							totam rem aperiam, eaque ipsa quae ab illo inventore 
 							veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
-							<a class="btn-sabroso btn" href="single.html">Conocer más</a>
+							<a id="btn-sabroso"class="btn" href="single.html">Conocer más</a>
 						</div>
 						<div class="clearfix"></div>
 					</li>
@@ -292,7 +299,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<h4>SUBSCRIBETE</h4>
 				<form>
 					<input class="form-control"type="email" value="Enter your email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Enter your email';}" required="">
-					<input type="submit" value=" ">
+					<br>
+					<button type="submit" class="btn btn-sabroso">Suscribirse</button>
 				</form>
 			</div>
 			<div class="col-md-3 footer-grid">
