--- a/index.html
+++ b/index.html
@@ -54,10 +54,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		}
 		.btn-sabroso:hover{
 			background-color: #2A46DD;
-			color: black;
+			color: white;
+		}
+		.btn-sabroso{
+			background-color: #2a73dd;
+			color: white;
 		}
 		.ul-footer li{
 			color: white;
+		}
+		#button-c{
+			color: white;
+		}
+		.footer-grid form{
+			background-color: red;
 		}
 	</style>
 </head>
@@ -148,7 +158,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							error sit voluptatem accusantium doloremque laudantium, 
 							totam rem aperiam, eaque ipsa quae ab illo inventore 
 							veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
-							<a id="btn-sabroso"class="btn" href="single.html">Conocer más</a>
+							<a class="hvr-rectangle-out" id="button-c" href="single.html">Conocer más</a>
 						</div>
 						<div class="clearfix"></div>
 					</li>
@@ -159,7 +169,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<p id="white-text">
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus aperiam nostrum animi harum dolor, quisquam vero voluptas velit, voluptatem asperiores quidem impedit dignissimos. Voluptatibus omnis, porro ad illo saepe, rerum.
 							</p>
-							<a id="btn-sabroso"class="btn" href="single.html">Conocer más</a>
+							<a class="hvr-rectangle-out" id="button-c" href="single.html">Conocer más</a>
 						</div>
 						<div class="clearfix"></div>
 					</li>
@@ -171,7 +181,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							error sit voluptatem accusantium doloremque laudantium, 
 							totam rem aperiam, eaque ipsa quae ab illo inventore 
 							veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
-							<a id="btn-sabroso"class="btn" href="single.html">Conocer más</a>
+							<a class="hvr-rectangle-out" id="button-c" href="single.html">Conocer más</a>
 						</div>
 						<div class="clearfix"></div>
 					</li>
