--- a/index.html
+++ b/index.html
@@ -204,6 +204,25 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					Temporibus autem quibusdam et aut officiis debitis aut rerum </p>
 				</div>
 			</div>
+			<div class="col-md-6 special-right l-left">
+				<div class="sp-wid l-wid">
+					<h4>LOS MEJORES DULCES ESTAN AQUI</h4>
+					<p>Nam libero tempore, cum soluta nobis est eligendi optio 
+					cumque nihil impedit quo minus id quod maxime placeat facere
+					possimus, omnis voluptas assumenda est, omnis dolor repellendus. 
+					Temporibus autem quibusdam et aut officiis debitis aut rerum </p>
+				</div>
+				
+			</div>
+			<div class="col-md-6 special-left l-right l-grids">
+				 <figure class="effect-bubba">
+						<img src="images/productos/sabroricos-28.jpg" alt=""/>
+						<figcaption>
+							<h4>SABRORICOS</h4>
+							<p>In sit amet sapien eros quibusdam et aut officiis debitis aut rerum Integer in tincidunt labore et dolore magna aliqua</p>																
+						</figcaption>			
+				 </figure>
+			</div>
 			<div class="clearfix"></div>
 		</div>
 	</div>
