--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="welcome-head">
 			<h3 class="tittle">Bienvenido</h3>
 			<div class="wel-img mask text-center">
-					<a href="single.html" class="mask"><img class="img-responsive zoom-img" src="images/productos/sabroricos-28.jpg" alt=""/></a>
+					<a href="single.html" class="mask"><img class="img-responsive zoom-img" src="images/productos/sabroricos.jpg" alt=""/></a>
 			</div>
 			<h4>NUESTROS DULCES SON LOS MEJORES DEL MUNDO</h4>
 			<p>Nam libero tempore, cum soluta nobis est eligendi optio 
@@ -271,7 +271,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 		</div>
 		<div class="col-md-6 events-left text-center">
-			<img src="images/2.jpg" alt="" />
+			<img src="images/productos/sabroricos-32.jpg" alt="" />
 		</div>
 		<div class="clearfix"></div>
 	</div>
