--- a/services.html
+++ b/services.html
@@ -132,49 +132,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 		</div>
 	</div>
-<div class="services-list">
-	<div class="container">
-		<div class="serv-list-info">
-			<h3 class="tittle t-three">LISTA DE DULCES</h3>
-			<p>On the other hand, we denounce with righteous indignation and dislike men 
-			who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire</p>
-		</div>
-		<div class="serv-list-grids">
-			<div class="col-md-4 serv-list-grid">
-				<ul>
-					<li><a href="#">These cases are perfectly </a></li>
-					<li><a href="#">At vero eos et accusamus</a></li>
-					<li><a href="#">On the other hand, we  </a></li>
-					<li><a href="#">The wise man therefore </a></li>
-					<li><a href="#">Temporibus autem quibus</a></li>
-					<li><a href="#">To take a trivial exam</a></li>
-				</ul>
+<div class="wel-img mask text-center">
+					<a href="single.html" class="mask"><img class="img-responsive zoom-img" src="images/productos/sabroricos-28.jpg" alt=""/></a>
 			</div>
-			<div class="col-md-4 serv-list-grid">
-				<ul>
-					<li><a href="#">The wise man therefore </a></li>
-					<li><a href="#">Temporibus autem quibus</a></li>
-					<li><a href="#">To take a trivial exam</a></li>
-					<li><a href="#">These cases are perfectly</a></li>
-					<li><a href="#">At vero eos et accusamus</a></li>
-					<li><a href="#">On the other hand, we</a></li>
-					
-				</ul>
-			</div>
-			<div class="col-md-4 serv-list-grid">
-				<ul>
-					<li><a href="#">At vero eos et accusamus</a></li>
-					<li><a href="#">On the other hand, we</a></li>
-					<li><a href="#">The wise man therefore</a></li>
-					<li><a href="#">These cases are perfectly</a></li>
-					<li><a href="#">Temporibus autem quibus</a></li>
-					<li><a href="#">To take a trivial exam</a></li>
-				</ul>
-			</div>
-			<div class="clearfix"></div>
-		</div>
-	</div>
-</div>
 <div class="services">
 	<div class="container">
 		<div class="services-info">
