--- a/gallery.html
+++ b/gallery.html
@@ -45,15 +45,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="header-top">
 	<div class="container">
 				<div class="header-top-left">
-					<p>Frase de sabroricos</p>
+					<p>Saboreate con saladitos sabroricos</p>
 				</div>
 				<div class="header-top-mid">
-					<span class="glyphicon glyphicon-earphone" aria-hidden="true"></span><p>Llama para informacion: +664-123-4567</p>
+					<span class="glyphicon glyphicon-earphone" aria-hidden="true"></span><p>664-525-6812</p>
 				</div>
 				<div class="header-top-right">
 					<ul>
-						<li><a href="#" class="f1"> </a></li>
-						<li><a href="#" class="f2"> </a></li>
+						<li><a href="https://www.facebook.com/Sabroricos" class="f1"> </a></li>
+						<li><a href="https://www.facebook.com/Sabroricos" class="f2"> </a></li>
 						
 					</ul>
 				</div>
@@ -192,29 +192,28 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-3 footer-grid">
 				<h4>DIRECCION</h4>
 				<ul>
-					<li>SABRORICOS</li>
-					<li>1234 calle 123</li>
-					<li>BC 29601 </li>
-					<li>Horario: Lun-Vie 9am - 6pm</li>
+					<li>SALADITOS SABRORICOS</li>
+					<li>Calle Ricardo Castro #319</li>
+					<li>Colonia Nueva Tijuana</li>
+					<li>Horario: Lun-Sab 9am - 6pm</li>
 				</ul>
 			</div>
 			<div class="col-md-3 footer-grid">
 				<h4>CONTACTO</h4>
 				<ul>
-					<li>Tel: +1 234-567-890</li>
-					<li>Fax: +1 646-216-9789</li>
-					<li>Email: <a href="mailto:info@sabroricos.com">info@sabroricos.com </a></li>
+					<li>Tel: 664-525-6812</li>
+					<li>Email: <a href="mailto:lokoalateconsabroricos@hotmail.com">lokoalateconsabroricos@hotmail.com</a></li>
 				</ul>
 			</div>
 			<div class="col-md-3 footer-grid">
-				<h4>SUBSCRIBETE</h4>
+				<h4>SUSCRIBETE</h4>
 				<form>
 					<input type="email" value="Enter your email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Enter your email';}" required="">
 					<input type="submit" value=" ">
 				</form>
 			</div>
 			<div class="col-md-3 footer-grid">
-				<h2><a href="index.html">SABRORICOS</a></h2>
+				<h2><a href="index.html">SALADITOS SABRORICOS</a></h2>
 			</div>
 			<div class="clearfix"></div>
 		</div>
