--- a/services.html
+++ b/services.html
@@ -44,15 +44,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="header-top">
 	<div class="container">
 				<div class="header-top-left">
-					<p>Frase de sabroricos</p>
+					<p>Saboreate con saladitos sabroricos</p>
 				</div>
 				<div class="header-top-mid">
-					<span class="glyphicon glyphicon-earphone" aria-hidden="true"></span><p>Llama para informacion: +664-123-4567</p>
+					<span class="glyphicon glyphicon-earphone" aria-hidden="true"></span><p>664-525-6812</p>
 				</div>
 				<div class="header-top-right">
 					<ul>
-						<li><a href="#" class="f1"> </a></li>
-						<li><a href="#" class="f2"> </a></li>
+						<li><a href="https://www.facebook.com/Sabroricos" class="f1"> </a></li>
+						<li><a href="https://www.facebook.com/Sabroricos" class="f2"> </a></li>
 						
 					</ul>
 				</div>
@@ -105,28 +105,24 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="ser-first-grids">
 					<div class="col-md-3 ser-first-grid text-center">
-						<div class="ser-spa"><span class="glyphicon glyphicon-education" aria-hidden="true"></span></div>
+						<div class="ser-spa"><span class="glyphicon glyphicon-star" aria-hidden="true"></span></div>
 						<h3>DISTRIBUCION</h3>
-						<p>These cases are perfectly simple and easy to distinguish. 
-							In a free hour, when our power of choice is untrammelled</p>
+						<p>¿Estas interesado en distribuir deliciosos productos?, Saladitos Sabroricos te espera, contacta con nosotros. </p>
 					</div>
 					<div class="col-md-3 ser-first-grid text-center">
-						<div class="ser-spa"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></div>
-						<h3>EMPAQUETADO</h3>
-						<p>These cases are perfectly simple and easy to distinguish. 
-							In a free hour, when our power of choice is untrammelled</p>
+						<div class="ser-spa"><span class="glyphicon glyphicon-star" aria-hidden="true"></span></div>
+						<h3>EVENTOS</h3>
+						<p>Los mejores dulces en calidad y sabor para hacer de un evento algo inolvidable, sorprente a tus invitados</p>
 					</div>
 					<div class="col-md-3 ser-first-grid text-center">
 						<div class="ser-spa"><span class="glyphicon glyphicon-star" aria-hidden="true"></span></div>
 						<h3>FABRICACION</h3>
-						<p>These cases are perfectly simple and easy to distinguish. 
-							In a free hour, when our power of choice is untrammelled</p>
+						<p>Estamos a disposicion de pedidos especiales, ya que hacer deliciosos dulces es nuestra especialidad, contactanos siempre</p>
 					</div>
 					<div class="col-md-3 ser-first-grid text-center">
-						<div class="ser-spa"><span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span></div>
+						<div class="ser-spa"><span class="glyphicon glyphicon-star" aria-hidden="true"></span></div>
 						<h3>A GRANEL</h3>
-						<p>These cases are perfectly simple and easy to distinguish. 
-							In a free hour, when our power of choice is untrammelled</p>
+						<p>A cualquier hora, en cualquier momento del dia, disfruta de tus productos sabroricos, para compartir o para saborear solo</p>
 					</div>
 					<div class="clearfix"></div>
 				</div>
@@ -139,6 +135,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="container">
 		<div class="services-info">
 			<h3 class="tittle">LOS MAS VENDIDOS</h3>
+			<p>Los mas pedidos, los preferidos del publico y los mas vendidos, no quiere decir que sean los mejores, todos los productos Saladitos Sabroricos tienen un alto estandar de sabor y calidad, es cuestion de gustos y preferencias, el publico asi lo eligio, nuestros seis productos mas vendidos.</p>
 		</div>
 		<div class="services-grids">
 				<div class="col-md-4 services-grid">
@@ -146,10 +143,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<p>01</p>
 					</div>
 					<div class="services-right">
-						<h3>AT VERO EOS ET ACCUSAMUS</h3>
-						<p>Sed ut perspiciatis unde omnis iste natus error sit 
-						voluptatem accusantium doloremque laudantium, totam rem 
-						aperiam, eaque ipsa quae ab illo </p>
+						<h3>GOMIRICA DE SANDIA</h3>
+						<p>Una de las preferidas por pequeños y grandes, la mas vendida para disfrutar a todas horas del dia, balance perfecto entre dulzura y acidito </p>
 					</div>
 					<div class="clearfix"></div>
 				</div>
@@ -158,10 +153,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<p>02</p>
 					</div>
 					<div class="services-right">
-						<h3>AT VERO EOS ET ACCUSAMUS</h3>
-						<p>Sed ut perspiciatis unde omnis iste natus error sit 
-						voluptatem accusantium doloremque laudantium, totam rem 
-						aperiam, eaque ipsa quae ab illo </p>
+						<h3>GOMIRICAS DE DURAZNO</h3>
+						<p>Las clasicas de Durazno, ahora con el acidito y picosito sabor de Saladitos Sabroricos, la ponen entre las preferidas de todos por igual </p>
 					</div>
 					<div class="clearfix"></div>
 				</div>
@@ -170,10 +163,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<p>03</p>
 					</div>
 					<div class="services-right">
-						<h3>AT VERO EOS ET ACCUSAMUS</h3>
-						<p>Sed ut perspiciatis unde omnis iste natus error sit 
-						voluptatem accusantium doloremque laudantium, totam rem 
-						aperiam, eaque ipsa quae ab illo </p>
+						<h3>RIELITO CON CHILE</h3>
+						<p>Los rielitos se han mantenido en el gusto de la gente por decadas, el sabor de siempre con la calidad y sabor de Saladitos Sabroricos</p>
 					</div>
 					<div class="clearfix"></div>
 				</div>
@@ -182,10 +173,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<p>04</p>
 					</div>
 					<div class="services-right">
-						<h3>AT VERO EOS ET ACCUSAMUS</h3>
-						<p>Sed ut perspiciatis unde omnis iste natus error sit 
-						voluptatem accusantium doloremque laudantium, totam rem 
-						aperiam, eaque ipsa quae ab illo </p>
+						<h3>MANGO CON CHILE</h3>
+						<p>El favorito de las frutas, el delicioso mango con chile preferido por los jovenes y los adultos, mango con chile llego para quedarse</p>
 					</div>
 					<div class="clearfix"></div>
 				</div>
@@ -194,10 +183,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<p>05</p>
 					</div>
 					<div class="services-right">
-						<h3>AT VERO EOS ET ACCUSAMUS</h3>
-						<p>Sed ut perspiciatis unde omnis iste natus error sit 
-						voluptatem accusantium doloremque laudantium, totam rem 
-						aperiam, eaque ipsa quae ab illo</p>
+						<h3>GOMIRICAS DE GUSANITO</h3>
+						<p>Las favoritas de los niños, las gomiricas de gusano </p>
 					</div>
 					<div class="clearfix"></div>
 				</div>
@@ -226,29 +213,28 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-3 footer-grid">
 				<h4>DIRECCION</h4>
 				<ul>
-					<li>SABRORICOS</li>
-					<li>1234 calle 123</li>
-					<li>BC 29601 </li>
-					<li>Horario: Lun-Vie 9am - 6pm</li>
+					<li>SALADITOS SABRORICOS</li>
+					<li>Calle Ricardo Castro #319</li>
+					<li>Colonia Nueva Tijuana</li>
+					<li>Horario: Lun-Sab 9am - 6pm</li>
 				</ul>
 			</div>
 			<div class="col-md-3 footer-grid">
 				<h4>CONTACTO</h4>
 				<ul>
-					<li>Tel: +1 234-567-890</li>
-					<li>Fax: +1 646-216-9789</li>
-					<li>Email: <a href="mailto:info@sabroricos.com">info@sabroricos.com </a></li>
+					<li>Tel: 664-525-6812</li>
+					<li>Email: <a href="mailto:lokoalateconsabroricos@hotmail.com">lokoalateconsabroricos@hotmail.com</a></li>
 				</ul>
 			</div>
 			<div class="col-md-3 footer-grid">
-				<h4>SUBSCRIBETE</h4>
+				<h4>SUSCRIBETE</h4>
 				<form>
 					<input type="email" value="Enter your email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Enter your email';}" required="">
 					<input type="submit" value=" ">
 				</form>
 			</div>
 			<div class="col-md-3 footer-grid">
-				<h2><a href="index.html">SABRORICOS</a></h2>
+				<h2><a href="index.html">SALADITOS SABRORICOS</a></h2>
 			</div>
 			<div class="clearfix"></div>
 		</div>
