--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<p>Saboreate con saladitos sabroricos</p>
 				</div>
 				<div class="header-top-mid">
-					<span class="glyphicon glyphicon-earphone" aria-hidden="true"></span><p>Llama para informacion: 664-525-6812</p>
+					<span class="glyphicon glyphicon-earphone" aria-hidden="true"></span><p>664-525-6812</p>
 				</div>
 				<div class="header-top-right">
 					<ul>
-						<li><a href="#" class="f1"> </a></li>
-						<li><a href="#" class="f2"> </a></li>
+						<li><a href="https://www.facebook.com/Sabroricos" class="f1"> </a></li>
+						<li><a href="https://www.facebook.com/Sabroricos" class="f2"> </a></li>
 						
 					</ul>
 				</div>
