--- a/blog.html
+++ b/blog.html
@@ -106,13 +106,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="blog-post">
 					<a href="#"><img src="images/productos/sabroricos-3.jpg" class="img-responsive" alt=""/></a>
 					<div class="text">
-						<a href="#"> Aliquam erat volutpat</a>
+						<a href="#"> Nombre del producto</a>
 					</div>
 					<div class="admin-tag">
-					<p class="erat">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					Nulla in purus nibh. Donec ornare felis neque. Nullam tortor 
-					nulla, sodales quis posuere quis, tristique nec libero. Proin 
-					vitae convallis odio. Morbi nec enim nisi. Aliquam erat volutpat.</p>
+					<p class="erat">Descripcion de producto</p>
 					</div>
 			</div>
 			<div class="blog-post">
@@ -121,10 +118,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<a href="#"> Aliquam erat volutpat</a>
 					</div>
 					<div class="admin-tag">
-					<p class="erat">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					Nulla in purus nibh. Donec ornare felis neque. Nullam tortor 
-					nulla, sodales quis posuere quis, tristique nec libero. Proin 
-					vitae convallis odio. Morbi nec enim nisi. Aliquam erat volutpat.</p>
+					<p class="erat">Descripcion de producto</p>
 					</div>
 			</div>
 		</div>
@@ -132,25 +126,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="blog-post">
 				<a href="#"><img src="images/productos/sabroricos-36.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
-					<a href="#"> Aliquam erat volutpat</a>
+					<a href="#"> Nombre del producto</a>
 				</div>
 				<div class="admin-tag">
-				<p class="erat">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-				Nulla in purus nibh. Donec ornare felis neque. Nullam tortor 
-				nulla, sodales quis posuere quis, tristique nec libero. Proin 
-				vitae convallis odio. Morbi nec enim nisi. Aliquam erat volutpat.</p>
+				<p class="erat">Descripcion de producto</p>
 				</div>
 			</div>
 			<div class="blog-post">
 				<a href="#"><img src="images/productos/sabroricos-30.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
-					<a href="#"> Aliquam erat volutpat</a>
+					<a href="#"> Nombre del producto</a>
 				</div>
 				<div class="admin-tag">
-				<p class="erat">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-				Nulla in purus nibh. Donec ornare felis neque. Nullam tortor 
-				nulla, sodales quis posuere quis, tristique nec libero. Proin 
-				vitae convallis odio. Morbi nec enim nisi. Aliquam erat volutpat.</p>
+				<p class="erat">Descripcion de producto</p>
 				</div>
 			</div>
 		</div>
@@ -158,25 +146,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="blog-post">
 				<a href="#"><img src="images/productos/sabroricos-6.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
-					<a href="#"> Aliquam erat volutpat</a>
+					<a href="#"> Nombre del producto</a>
 				</div>
 				<div class="admin-tag">
-				<p class="erat">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-				Nulla in purus nibh. Donec ornare felis neque. Nullam tortor 
-				nulla, sodales quis posuere quis, tristique nec libero. Proin 
-				vitae convallis odio. Morbi nec enim nisi. Aliquam erat volutpat.</p>
+				<p class="erat">Descripcion de producto</p>
 				</div>
 			</div>
 			<div class="blog-post">
 				<a href="#"><img src="images/productos/sabroricos-7.jpg" class="img-responsive" alt="  "/></a>
 				<div class="text">
-					<a href="#"> Aliquam erat volutpat</a>
+					<a href="#"> Nombre del producto</a>
 				</div>
 				<div class="admin-tag">
-				<p class="erat">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-				Nulla in purus nibh. Donec ornare felis neque. Nullam tortor 
-				nulla, sodales quis posuere quis, tristique nec libero. Proin 
-				vitae convallis odio. Morbi nec enim nisi. Aliquam erat volutpat.</p>
+				<p class="erat">Descripcion de producto</p>
 				</div>
 			</div>
 		</div>
@@ -185,14 +167,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!--start-news-pagenate-->
 				<div class="blog-pagenat">
 					<ul>
-						<li><a class="frist" href="#">Anterior</a></li>
-						<li><a href="#">1</a></li>
-						<li><a href="#">2</a></li>
-						<li><a href="#">3</a></li>
-						<li><a href="#">4</a></li>
-						<li><a href="#">5</a></li>
-						<li><a href="#">6</a></li>
-						<li><a class="last" href="#">Siguiente</a></li>
+						<li><a class="frist">Anterior</a></li>
+						<li><a class="active-blog">1</a></li>
+						<li><a href="blog2.html">2</a></li>
+						<li><a href="blog3.html">3</a></li>
+						<li><a href="blog4.html">4</a></li>
+						<li><a class="last" href="blog2.html">Siguiente</a></li>
 					</ul>
 				</div>
 			<!--//End-news-pagenate-->
