--- a/gallery2.html
+++ b/gallery2.html
@@ -184,11 +184,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <!--start-news-pagenate-->
 				<div class="blog-pagenat">
 					<ul>
-						<li><a class="frist">Anterior</a></li>
-						<li><a class="active-blog">1</a></li>
-						<li><a href="gallery2.html">2</a></li>
+						<li><a class="frist" href="gallery.html">Anterior</a></li>
+						<li><a href="gallery.html">1</a></li>
+						<li><a class="active-blog">2</a></li>
 						<li><a href="gallery3.html">3</a></li>
-						<li><a class="last" href="gallery2.html">Siguiente</a></li>
+						<li><a class="last" href="gallery3.html">Siguiente</a></li>
 					</ul>
 				</div>
 			<!--//End-news-pagenate-->
