--- a/blog4.html
+++ b/blog4.html
@@ -25,6 +25,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- fonts -->
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
 
+
 <!-- //fonts -->
 	<!-- start-smoth-scrolling -->
 		<script type="text/javascript" src="js/move-top.js"></script>
@@ -74,8 +75,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="clearfix"></div>
 				<ul class="nav1">
 					<li><a class="hvr-overline-from-center button2" href="about.html">ACERCA</a></li>
-					<li><a class=" active hvr-overline-from-center button2" href="services.html">SERVICIOS</a></li>
-					<li><a class="hvr-overline-from-center button2" href="blog.html">PRODUCTOS</a></li>
+					<li><a class="hvr-overline-from-center button2" href="services.html">SERVICIOS</a></li>
+					<li><a class="active hvr-overline-from-center button2" href="blog.html">PRODUCTOS</a></li>
 					<li><a class="hvr-overline-from-center button2" href="gallery.html">GALERIA</a></li>	
 					<li><a class="hvr-overline-from-center button2" href="contact.html">CONTACTO</a></li>
 					<li><a class="hvr-overline-from-center button2" href="typography.html">COTIZA</a></li>
@@ -97,115 +98,88 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="banner page-head">	
 </div>
 <!-- //banner -->
-<!--services-starts--> 
-<div class="ser-first">
-		<div class="container">
-				<div class="services-info">
-					<h3 class="tittle">SERVICIOS</h3>
-				</div>
-				<div class="ser-first-grids">
-					<div class="col-md-3 ser-first-grid text-center">
-						<div class="ser-spa"><span class="glyphicon glyphicon-star" aria-hidden="true"></span></div>
-						<h3>DISTRIBUCION</h3>
-						<p>¿Estas interesado en distribuir deliciosos productos?, Saladitos Sabroricos te espera, contacta con nosotros. </p>
+<!--blog-starts--> 
+<div class="blog-section">
+	<div class="container"> 
+		<h3 class="tittle">Productos</h3>
+		<div class="col-md-4 blog-post-grids">
+			<div class="blog-post">
+					<a href="#"><img src="images/productos/sabroricos-3.jpg" class="img-responsive" alt=""/></a>
+					<div class="text">
+						<a href="#"> Nombre del producto</a>
 					</div>
-					<div class="col-md-3 ser-first-grid text-center">
-						<div class="ser-spa"><span class="glyphicon glyphicon-star" aria-hidden="true"></span></div>
-						<h3>EVENTOS</h3>
-						<p>Los mejores dulces en calidad y sabor para hacer de un evento algo inolvidable, sorprente a tus invitados</p>
+					<div class="admin-tag">
+					<p class="erat">Descripcion de producto</p>
 					</div>
-					<div class="col-md-3 ser-first-grid text-center">
-						<div class="ser-spa"><span class="glyphicon glyphicon-star" aria-hidden="true"></span></div>
-						<h3>FABRICACION</h3>
-						<p>Estamos a disposicion de pedidos especiales, ya que hacer deliciosos dulces es nuestra especialidad, contactanos siempre</p>
-					</div>
-					<div class="col-md-3 ser-first-grid text-center">
-						<div class="ser-spa"><span class="glyphicon glyphicon-star" aria-hidden="true"></span></div>
-						<h3>A GRANEL</h3>
-						<p>A cualquier hora, en cualquier momento del dia, disfruta de tus productos sabroricos, para compartir o para saborear solo</p>
-					</div>
-					<div class="clearfix"></div>
-				</div>
-		</div>
-	</div>
-<div class="wel-img mask text-center">
-					<a href="single.html" class="mask"><img class="img-responsive zoom-img" src="images/productos/sabroricos-28.jpg" alt=""/></a>
 			</div>
-<div class="services">
-	<div class="container">
-		<div class="services-info">
-			<h3 class="tittle">LOS MAS VENDIDOS</h3>
-			<p class="col-md-12 col-ls-12">Los mas pedidos, los preferidos del publico y los mas vendidos, no quiere decir que sean los mejores, todos los productos Saladitos Sabroricos tienen un alto estandar de sabor y calidad, es cuestion de gustos y preferencias, el publico asi lo eligio, nuestros seis productos mas vendidos.</p>
+			<div class="blog-post">
+					<a href="#"><img src="images/productos/sabroricos-32.jpg" class="img-responsive" alt="  "/></a>
+					<div class="text">
+						<a href="#"> Aliquam erat volutpat</a>
+					</div>
+					<div class="admin-tag">
+					<p class="erat">Descripcion de producto</p>
+					</div>
+			</div>
 		</div>
-		<br>
-		<div class="services-grids">
-			<br><br><br>
-				<div class="col-md-4 services-grid">
-					<div class="services-left">
-						<p>01</p>
-					</div>
-					<div class="services-right">
-						<h3>GOMIRICA DE SANDIA</h3>
-						<p>Una de las preferidas por pequeños y grandes, la mas vendida para disfrutar a todas horas del dia, balance perfecto entre dulzura y acidito </p>
-					</div>
-					<div class="clearfix"></div>
+		<div class="col-md-4 blog-post-grids">
+			<div class="blog-post">
+				<a href="#"><img src="images/productos/sabroricos-36.jpg" class="img-responsive" alt="  "/></a>
+				<div class="text">
+					<a href="#"> Nombre del producto</a>
 				</div>
-				<div class="col-md-4 services-grid">
-					<div class="services-left">
-						<p>02</p>
-					</div>
-					<div class="services-right">
-						<h3>GOMIRICAS DE DURAZNO</h3>
-						<p>Las clasicas de Durazno, ahora con el acidito y picosito sabor de Saladitos Sabroricos, la ponen entre las preferidas de todos por igual </p>
-					</div>
-					<div class="clearfix"></div>
+				<div class="admin-tag">
+				<p class="erat">Descripcion de producto</p>
 				</div>
-				<div class="col-md-4 services-grid">
-					<div class="services-left">
-						<p>03</p>
-					</div>
-					<div class="services-right">
-						<h3>RIELITO CON CHILE</h3>
-						<p>Los rielitos se han mantenido en el gusto de la gente por decadas, el sabor de siempre con la calidad y sabor de Saladitos Sabroricos</p>
-					</div>
-					<div class="clearfix"></div>
+			</div>
+			<div class="blog-post">
+				<a href="#"><img src="images/productos/sabroricos-30.jpg" class="img-responsive" alt="  "/></a>
+				<div class="text">
+					<a href="#"> Nombre del producto</a>
 				</div>
-				<div class="col-md-4 services-grid">
-					<div class="services-left">
-						<p>04</p>
-					</div>
-					<div class="services-right">
-						<h3>MANGO CON CHILE</h3>
-						<p>El favorito de las frutas, el delicioso mango con chile preferido por los jovenes y los adultos, mango con chile llego para quedarse</p>
-					</div>
-					<div class="clearfix"></div>
+				<div class="admin-tag">
+				<p class="erat">Descripcion de producto</p>
 				</div>
-				<div class="col-md-4 services-grid">
-					<div class="services-left">
-						<p>05</p>
-					</div>
-					<div class="services-right">
-						<h3>GOMIRICAS DE GUSANITO</h3>
-						<p>Las favoritas de los niños, las gomiricas de gusano son deliciosamente Sabroricas, con esa combinacion agridulce que les encanta</p>
-					</div>
-					<div class="clearfix"></div>
-				</div>
-				<div class="col-md-4 services-grid">
-					<div class="services-left">
-						<p>06</p>
-					</div>
-					<div class="services-right">
-						<h3>GOMIRICAS DE NARANJA</h3>
-						<p>Aciditas, dulces y chiclosas, se tienen su lugar merecido entre el gusto de la gente, de los primeros productos de Saladitos Sabroricos </p>
-					</div>
-					<div class="clearfix"></div>
-				</div>
-				<div class="clearfix"></div>
+			</div>
 		</div>
-		
+		<div class="col-md-4 blog-post-grids">
+			<div class="blog-post">
+				<a href="#"><img src="images/productos/sabroricos-6.jpg" class="img-responsive" alt="  "/></a>
+				<div class="text">
+					<a href="#"> Nombre del producto</a>
+				</div>
+				<div class="admin-tag">
+				<p class="erat">Descripcion de producto</p>
+				</div>
+			</div>
+			<div class="blog-post">
+				<a href="#"><img src="images/productos/sabroricos-7.jpg" class="img-responsive" alt="  "/></a>
+				<div class="text">
+					<a href="#"> Nombre del producto</a>
+				</div>
+				<div class="admin-tag">
+				<p class="erat">Descripcion de producto</p>
+				</div>
+			</div>
+		</div>
+		<div class="clearfix"> </div>
 	</div>
-</div>
-<!--services-ends--> 
+	<!--start-news-pagenate-->
+				<div class="blog-pagenat">
+					<ul>
+						<li><a class="frist" href="blog3.html">Anterior</a></li>
+						<li><a href="blog.html">1</a></li>
+						<li><a href="blog2.html">2</a></li>
+						<li><a href="blog3.html">3</a></li>
+						<li><a class="active-blog">4</a></li>
+						<li><a class="last">Siguiente</a></li>
+					</ul>
+				</div>
+			<!--//End-news-pagenate-->
+	</div> 
+
+<!--blog-ends--> 
+
 <!-- footer -->
 <div class="footer">
 	<div class="container">
