--- a/blog3.html
+++ b/blog3.html
@@ -1,8 +1,5 @@
 
 <body>
-<!-- strip -->
-<div class="strip"></div>
-<!-- //strip -->
 <!-- banner -->
 <div class="banner page-head">	
 </div>
@@ -76,16 +73,16 @@
 	<!--start-news-pagenate-->
 				<div class="blog-pagenat">
 					<ul>
-						<li><a class="frist" href="#productos4">Anterior</a></li>
-						<li><a id="active-blog">1</a></li>
+						<li><a class="frist" href="#productos2">Anterior</a></li>
+						<li><a href="#productos">1</a></li>
 						<li><a href="#productos2">2</a></li>
-						<li><a href="#productos3">3</a></li>
-						<li><a href="#productos3">4</a></li>
-						<li><a class="last" href="#productos2">Siguiente</a></li>
+						<li><a id="active-blog">3</a></li>
+						<li><a href="#productos4">4</a></li>
+						<li><a class="last" href="#productos4">Siguiente</a></li>
 					</ul>
 				</div>
 			<!--//End-news-pagenate-->
-	</div> 
+</div> 
 
 <!--blog-ends--> 
 <!-- for bootstrap working -->
