--- a/blog4.html
+++ b/blog4.html
@@ -1,8 +1,5 @@
 
 <body>
-<!-- strip -->
-<div class="strip"></div>
-<!-- //strip -->
 <!-- banner -->
 <div class="banner page-head">	
 </div>
@@ -76,12 +73,12 @@
 	<!--start-news-pagenate-->
 				<div class="blog-pagenat">
 					<ul>
-						<li><a class="frist" href="#productos4">Anterior</a></li>
-						<li><a id="active-blog">1</a></li>
+						<li><a class="frist" href="#productos3">Anterior</a></li>
+						<li><a href="#productos">1</a></li>
 						<li><a href="#productos2">2</a></li>
 						<li><a href="#productos3">3</a></li>
-						<li><a href="#productos3">4</a></li>
-						<li><a class="last" href="#productos2">Siguiente</a></li>
+						<li><a id="active-blog">4</a></li>
+						<li><a class="last" href="#productos">Siguiente</a></li>
 					</ul>
 				</div>
 			<!--//End-news-pagenate-->
@@ -108,3 +105,4 @@
 	<a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
 <!-- //smooth scrolling -->
 </body>
+</html>
