--- a/gallery2.html
+++ b/gallery2.html
@@ -1,4 +1,3 @@
-
 <body>
 <!-- strip -->
 <div class="strip"></div>
@@ -10,7 +9,7 @@
 <!--gallery-starts--> 
 <div class="facilities">
 	<div class="container">
-		<h3 class="tittle">GALERIA</h3> 
+		<h3 class="tittle">GALERIA2</h3> 
 			
 			<script src="js/jquery.swipebox.min.js"></script> 
 			<script type="text/javascript">
@@ -93,11 +92,11 @@
                 <!--start-news-pagenate-->
 				<div class="blog-pagenat">
 					<ul>
-						<li><a class="frist" href="#galeria3">Anterior</a></li>
-						<li><a id="active-blog">1</a></li>
-						<li><a href="#galeria2">2</a></li>
+						<li><a class="frist" href="#galeria">Anterior</a></li>
+						<li><a href="#galeria">1</a></li>
+						<li><a id="active-blog">2</a></li>
 						<li><a href="#galeria3">3</a></li>
-						<li><a class="last" href="#galeria2">Siguiente</a></li>
+						<li><a class="last" href="#galeria3">Siguiente</a></li>
 					</ul>
 				</div>
 			<!--//End-news-pagenate-->
