--- a/gallery3.html
+++ b/gallery3.html
@@ -1,8 +1,4 @@
-
 <body>
-<!-- strip -->
-<div class="strip"></div>
-<!-- //strip -->
 <!-- banner -->
 <div class="banner page-head">	
 </div>
@@ -10,7 +6,7 @@
 <!--gallery-starts--> 
 <div class="facilities">
 	<div class="container">
-		<h3 class="tittle">GALERIA</h3> 
+		<h3 class="tittle">GALERIA 3</h3> 
 			
 			<script src="js/jquery.swipebox.min.js"></script> 
 			<script type="text/javascript">
@@ -93,11 +89,11 @@
                 <!--start-news-pagenate-->
 				<div class="blog-pagenat">
 					<ul>
-						<li><a class="frist" href="#galeria3">Anterior</a></li>
-						<li><a id="active-blog">1</a></li>
+						<li><a class="frist" href="#galeria2">Anterior</a></li>
+						<li><a href="#galeria">1</a></li>
 						<li><a href="#galeria2">2</a></li>
-						<li><a href="#galeria3">3</a></li>
-						<li><a class="last" href="#galeria2">Siguiente</a></li>
+						<li><a id="active-blog">3</a></li>
+						<li><a href="#galeria">Siguiente</a></li>
 					</ul>
 				</div>
 			<!--//End-news-pagenate-->
