--- a/services.html
+++ b/services.html
@@ -1,15 +1,4 @@
-
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
-<body >
-<!-- header -->
-<!-- //header --><!-- strip -->
-<div class="strip"></div>
-<!-- //strip -->
+<body>
 <!-- banner -->
 <div class="banner page-head">	
 </div>
@@ -22,28 +11,24 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 				<div class="ser-first-grids">
 					<div class="col-md-3 ser-first-grid text-center">
-						<div class="ser-spa"><span class="glyphicon glyphicon-education" aria-hidden="true"></span></div>
+						<div class="ser-spa"><span class="glyphicon glyphicon-star" aria-hidden="true"></span></div>
 						<h3>DISTRIBUCION</h3>
-						<p>These cases are perfectly simple and easy to distinguish. 
-							In a free hour, when our power of choice is untrammelled</p>
+						<p>¿Estas interesado en distribuir deliciosos productos?, Saladitos Sabroricos te espera, contacta con nosotros. </p>
 					</div>
 					<div class="col-md-3 ser-first-grid text-center">
-						<div class="ser-spa"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></div>
-						<h3>EMPAQUETADO</h3>
-						<p>These cases are perfectly simple and easy to distinguish. 
-							In a free hour, when our power of choice is untrammelled</p>
+						<div class="ser-spa"><span class="glyphicon glyphicon-star" aria-hidden="true"></span></div>
+						<h3>EVENTOS</h3>
+						<p>Los mejores dulces en calidad y sabor para hacer de un evento algo inolvidable, sorprente a tus invitados</p>
 					</div>
 					<div class="col-md-3 ser-first-grid text-center">
 						<div class="ser-spa"><span class="glyphicon glyphicon-star" aria-hidden="true"></span></div>
 						<h3>FABRICACION</h3>
-						<p>These cases are perfectly simple and easy to distinguish. 
-							In a free hour, when our power of choice is untrammelled</p>
+						<p>Estamos a disposicion de pedidos especiales, ya que hacer deliciosos dulces es nuestra especialidad, contactanos siempre</p>
 					</div>
 					<div class="col-md-3 ser-first-grid text-center">
-						<div class="ser-spa"><span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span></div>
+						<div class="ser-spa"><span class="glyphicon glyphicon-star" aria-hidden="true"></span></div>
 						<h3>A GRANEL</h3>
-						<p>These cases are perfectly simple and easy to distinguish. 
-							In a free hour, when our power of choice is untrammelled</p>
+						<p>A cualquier hora, en cualquier momento del dia, disfruta de tus productos sabroricos, para compartir o para saborear solo</p>
 					</div>
 					<div class="clearfix"></div>
 				</div>
@@ -56,17 +41,18 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="container">
 		<div class="services-info">
 			<h3 class="tittle">LOS MAS VENDIDOS</h3>
+			<p class="col-md-12 col-ls-12">Los mas pedidos, los preferidos del publico y los mas vendidos, no quiere decir que sean los mejores, todos los productos Saladitos Sabroricos tienen un alto estandar de sabor y calidad, es cuestion de gustos y preferencias, el publico asi lo eligio, nuestros seis productos mas vendidos.</p>
 		</div>
+		<br>
 		<div class="services-grids">
+			<br><br><br>
 				<div class="col-md-4 services-grid">
 					<div class="services-left">
 						<p>01</p>
 					</div>
 					<div class="services-right">
-						<h3>AT VERO EOS ET ACCUSAMUS</h3>
-						<p>Sed ut perspiciatis unde omnis iste natus error sit 
-						voluptatem accusantium doloremque laudantium, totam rem 
-						aperiam, eaque ipsa quae ab illo </p>
+						<h3>GOMIRICA DE SANDIA</h3>
+						<p>Una de las preferidas por pequeños y grandes, la mas vendida para disfrutar a todas horas del dia, balance perfecto entre dulzura y acidito </p>
 					</div>
 					<div class="clearfix"></div>
 				</div>
@@ -75,10 +61,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<p>02</p>
 					</div>
 					<div class="services-right">
-						<h3>AT VERO EOS ET ACCUSAMUS</h3>
-						<p>Sed ut perspiciatis unde omnis iste natus error sit 
-						voluptatem accusantium doloremque laudantium, totam rem 
-						aperiam, eaque ipsa quae ab illo </p>
+						<h3>GOMIRICAS DE DURAZNO</h3>
+						<p>Las clasicas de Durazno, ahora con el acidito y picosito sabor de Saladitos Sabroricos, la ponen entre las preferidas de todos por igual </p>
 					</div>
 					<div class="clearfix"></div>
 				</div>
@@ -87,10 +71,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<p>03</p>
 					</div>
 					<div class="services-right">
-						<h3>AT VERO EOS ET ACCUSAMUS</h3>
-						<p>Sed ut perspiciatis unde omnis iste natus error sit 
-						voluptatem accusantium doloremque laudantium, totam rem 
-						aperiam, eaque ipsa quae ab illo </p>
+						<h3>RIELITO CON CHILE</h3>
+						<p>Los rielitos se han mantenido en el gusto de la gente por decadas, el sabor de siempre con la calidad y sabor de Saladitos Sabroricos</p>
 					</div>
 					<div class="clearfix"></div>
 				</div>
@@ -99,10 +81,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<p>04</p>
 					</div>
 					<div class="services-right">
-						<h3>AT VERO EOS ET ACCUSAMUS</h3>
-						<p>Sed ut perspiciatis unde omnis iste natus error sit 
-						voluptatem accusantium doloremque laudantium, totam rem 
-						aperiam, eaque ipsa quae ab illo </p>
+						<h3>MANGO CON CHILE</h3>
+						<p>El favorito de las frutas, el delicioso mango con chile preferido por los jovenes y los adultos, mango con chile llego para quedarse</p>
 					</div>
 					<div class="clearfix"></div>
 				</div>
@@ -111,10 +91,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<p>05</p>
 					</div>
 					<div class="services-right">
-						<h3>AT VERO EOS ET ACCUSAMUS</h3>
-						<p>Sed ut perspiciatis unde omnis iste natus error sit 
-						voluptatem accusantium doloremque laudantium, totam rem 
-						aperiam, eaque ipsa quae ab illo</p>
+						<h3>GOMIRICAS DE GUSANITO</h3>
+						<p>Las favoritas de los niños, las gomiricas de gusano son deliciosamente Sabroricas, con esa combinacion agridulce que les encanta</p>
 					</div>
 					<div class="clearfix"></div>
 				</div>
@@ -123,10 +101,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<p>06</p>
 					</div>
 					<div class="services-right">
-						<h3>AT VERO EOS ET ACCUSAMUS</h3>
-						<p>Sed ut perspiciatis unde omnis iste natus error sit 
-						voluptatem accusantium doloremque laudantium, totam rem 
-						aperiam, eaque ipsa quae ab illo </p>
+						<h3>GOMIRICAS DE NARANJA</h3>
+						<p>Aciditas, dulces y chiclosas, se tienen su lugar merecido entre el gusto de la gente, de los primeros productos de Saladitos Sabroricos </p>
 					</div>
 					<div class="clearfix"></div>
 				</div>
@@ -156,4 +132,4 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
 <!-- //smooth scrolling -->
 </body>
-</html>
+
