--- a/about.html
+++ b/about.html
@@ -1,35 +1,21 @@
+<body>
 
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
-<!DOCTYPE html >
-<html >
-<div class="strip"></div>
-<!-- //strip -->
-	<!-- banner -->
+<!-- banner -->
 <div class="banner page-head">	
 </div>
 <!-- //banner -->
 <!--about-starts--> 
 <div class="about">
 	<div class="container">
-		<h3 class="tittle">ACERCA DE NOSOTROS</h3>
+		<h3 class="tittle">ACERCA DE SALADITOS SABRORICOS</h3>
 		<div class="col-md-5 about-grid-left">
 			<img class="img-responsive" src="images/productos/sabroricos-37.jpg" alt=""/>
 		</div>
 		<div class="col-md-7 about-grid">
-							<h3>Historia de Sabroricos</h3>
-							<p>Sed ut perspiciatis unde omnis iste natus error sit 
-							voluptatem accusantium doloremque laudantium, totam rem aperiam, 
-							eaque ipsa quae ab illo inventore veritatis et numquam eius modi 
-							tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. 
-							Ut enim ad minima veniam, quis nostrum</p>
-							<p>numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. 
-							Ut enim ad minima veniam, quis nostrum exercitation modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. 
-							Ut enim ad minima veniam, quis</p>
+							<h3>Historia de Saladitos Sabroricos</h3>
+							<p>Los fundadores de esta gran empresa de sabrosos dulces, iniciaron en la decada de los 70 en la ciudad de tijuana, entrando a la industria de los dulces con aproximadamente 10 productos, como saladitos con chile, sal, limón, al igual con el chamoy. sus clientes potenciales, eran dulcerias o tiendas establecidas, conforme se fue avanzando,  fue incrementando la variedad de productos  y la calidad de sabor haciendo que los dulces sabroricos cruzaran fronteras.</p>
+							<p>Tras pasar a manos de el actual dueño de la  empresa, Miguel Camacho, modernizo la empresa, poniendo una mejor calidad en sabor y presentacion al igual, registrando la marca de manera oficial y estableciendo una fabrica.
+							Adoptando a un Koala como la mascota de Saladitos Sabroricoss</p>
 		</div>
 		<div class="clearfix"></div>
 	</div>
@@ -37,29 +23,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!--start-team-->
 <div class="team">
 	<div class="container">
-		<h3 class="tittle t-two">Nuestro equipo/Koala</h3>
+		<h3 class="tittle t-two">Nuestro Koala</h3>
 			<div class="main">
 				<div class="col-md-3 view-grid">
 					<div class="view fifth-effect">
 						 <a href="#" title="Full Image"><img src="images/team-1.jpg" alt="" /></a>
-						 <div class="mask"></div>
-					</div> 
-				</div>
-				<div class="col-md-3 view-grid">
-					<div class="view fifth-effect">
-						 <a href="#" title="Full Image"><img src="images/team-2.jpg" alt="" /></a>
-						 <div class="mask"></div>
-					</div> 
-				</div>
-				<div class="col-md-3 view-grid">
-					<div class="view fifth-effect">
-						 <a href="#" title="Full Image"><img src="images/team-3.jpg" alt="" /></a>
-						 <div class="mask"></div>
-					</div> 
-				</div>
-				<div class="col-md-3 view-grid">
-					<div class="view fifth-effect">
-						 <a href="#" title="Full Image"><img src="images/team-4.jpg" alt="" /></a>
 						 <div class="mask"></div>
 					</div> 
 				</div>
@@ -73,15 +41,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="advantages">
 		<div class="container">
 			<div class="col-md-6 advantages-left">
-				<h3 class="tittle t-four">Nuestros logros</h3>
+				<h3 class="tittle t-four">Algunos de nuestros logros</h3>
 				<div class="advn-one">
 						<div class="ad-mian">
 							<div class="ad-left">
 								<p>1</p>
 							</div>
 							<div class="ad-right">
-								<h4><a href="single.html">Exportar a Estados Unidos</a></h4>
-								<p>In neque arcu, vulputate vitae dignissim id, placerat adipiscing lorem. Nulla consectetur adipiscing metus vel pulvinar. Aenean molestie mauris non diam tincidunt faucibus. </p>
+								<h4><a href="single.html">Presencia en Dulcerias de prestigio y Cines</a></h4>
+								<p>En grandes dulcerias y Cines de la region puedes encontrar los productos deliciosos que te encantan, disponibles siempre para disfrutar mientras vez una pelicula o para algun evento. </p>
 							</div>
 							<div class="clearfix"></div>
 						</div>
@@ -90,8 +58,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<p>2</p>
 							</div>
 							<div class="ad-right">
-								<h4><a href="single.html">Alto estandar de calidad</a></h4>
-								<p>In neque arcu, vulputate vitae dignissim id, placerat adipiscing lorem. Nulla consectetur adipiscing metus vel pulvinar. Aenean molestie mauris non diam tincidunt faucibus. </p>
+								<h4><a href="single.html">Exportacion a Estados Unidos</a></h4>
+								<p>La calidad y sabor de los productos hablan por si solos, y nos han abierto puertas al extranjero, donde actualmente se distribuyen productos de la deliciosa gama de Saladitos Sabroricos. </p>
 							</div>
 							<div class="clearfix"></div>
 						</div>
@@ -100,8 +68,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<p>3</p>
 							</div>
 							<div class="ad-right">
-								<h4><a href="single.html">Los mejores dulces de la region</a></h4>
-								<p>In neque arcu, vulputate vitae dignissim id, placerat adipiscing lorem. Nulla consectetur adipiscing metus vel pulvinar. Aenean molestie mauris non diam tincidunt faucibus. </p>
+								<h4><a href="single.html">Proxima apertura de venta a granel</a></h4>
+								<p>Los productos de Saladitos Sabroricos mas deliciosos que nunca, ahora disponibles en venta individual a granel para todas las personas, tambien muy pronto en tiendas de autoservicio. </p>
 							</div>
 							<div class="clearfix"></div>
 						</div>
@@ -110,17 +78,17 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="col-md-6 advantages-left">
 				<h3 class="tittle t-four">BENEFICIOS DE SER CLIENTE DE SALADITOS SABRORICOS</h3>
 			<div class="advn-two">
-						<h4>Erci eu tincidunt lacinia, elit quam ultri ces ipsum, quis ultricies ipsum ante</h4>
-						<p>Donec sagittis interdum tellus sed bibendum. Aen ean fringilla ut lacus eu vehicula. Curabitur non nibh quis nisi vestibulum aliquet non sed dolor. Ut est risus, consectetur sit amet pretium in, cursus in dui. Donec ac rhoncus libero.</p>
-						<!--
+						<h4>Calidad y sabor en los productos con un servicio personalizado.</h4>
+						<p>En Saladitos Sabroricos nos adapatamos a tus necesidades y estamos interesados en escucharte, contactanos para mas informacion, o ve directamente a la seccion de COTIZA.</p>
+						
 						<ul>
-							<li><a href="#">Praesent vestibulum molestie lacus</a></li>
-							<li><a href="#">Donec sagittis interdum tellus</a></li>
-							<li><a href="#">Nulla consectetur adipiscing</a></li>
-							<li><a href="#">Donec ac rhoncus libero.</a></li>
-							<li><a href="#">Erci eu tincidunt lacinia</a></li>
+							<li><a href="typography.html">¡Cotiza ahora!</a></li>
+							<li><a href="blog.html">¡Conoce los deliciosos productos!</a></li>
+							<li><a href="services.html">¡Conoce todos nuestros servicios!</a></li>
+							<li><a href="contact.html">¡Contacta con nosotros!</a></li>
+							<li><a href="gallery.html">¡Saboreate y lokoalate!</a></li>
 						</ul>
-					-->
+					
 			</div>
 			</div>
 			<div class="clearfix"></div>
@@ -148,4 +116,3 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
 <!-- //smooth scrolling -->
 </body>
-</html>
